# zeal-zshell

./: .gitignore  CHANGELOG  CMakeLists.txt  Kconfig  MENUCONFIG.md  README.md  increment_version.cmake  menuconfig.cmake  zshell.txt
.deploy/: .gitignore  eeprom.img  index.css  index.html  index.js  os.conf  setup.sh  zeal.elf.js  zeal.elf.wasm
.deploy/eeprom/: autoexec.zs  welcome.txt
.github/actions/deploy-pages/: action.yml
.github/workflows/: build.yml  deploy.yml
include/: ansi.h  keyboard.h
lib/: ansi.lib  keyboard.lib
scripts/: generate_config.py  setup.sh
src/: autoexec.c  autoexec.h  batch.c  batch.h  builtin.c  builtin.h  common.c  common.h  history.c  history.h  main.c  paths.c  paths.h  process.c  process.h  version.h.in
